# isaac_aligner

./: CODING  COPYRIGHT  README  README.md
src/: CMakeLists.txt  CODING  Changes  INSTALL  configure
src/bash/: CMakeLists.txt
src/bash/libexec/: CMakeLists.txt  colorize.sh  loggingShell.sh  logify.sh
src/bash/libexec/casava/: configureBuild.sh  extractResults.sh
src/c++/: CMakeLists.txt  CODING  Doxyfile.in
src/c++/include/alignment/: Alignment.hh  BamTemplate.hh  BandedSmithWaterman.hh  BclClusters.hh  BinMetadata.hh  Cigar.hh  Cluster.hh  ClusterSeedGenerator.hh  FragmentBuilder.hh  FragmentMetadata.hh  Match.hh  MatchDistribution.hh  MatchFilter.hh  MatchFinder.hh  MatchSelector.hh  MatchTally.hh  Quality.hh  Read.hh  RestOfGenomeCorrection.hh  Seed.hh  SeedGeneratorBase.hh  SeedId.hh  SeedLoader.hh  SeedMemoryManager.hh  SeedMetadata.hh  ShadowAligner.hh  TemplateBuilder.hh  TemplateLengthStatistics.hh
src/c++/include/bam/: Bam.hh  BamIndexer.hh  BamParser.hh  BgzfCompressor.hh
src/c++/include/basecalls/: ConfigXml.hh
src/c++/include/bgzf/: Bgzf.hh  BgzfCompressor.hh  BgzfReader.hh
src/c++/include/casava/: CasavaIntegration.hh
src/c++/include/common/: BitHacks.hh  BoostArchiveHelpers.hh  CsvGrammar.hh  Debug.hh  Endianness.hh  Exceptions.hh  FastIo.hh  FileSystem.hh  FiniteCapacityVector.hh  MD5Sum.hh  MathCompatibility.hh  Memory.hh  ParallelSort.hpp  Process.hh  Program.hh  Strings.hh  SystemCompatibility.hh  Threads.hpp  md5.hh
src/c++/include/demultiplexing/: Barcode.hh  BarcodeLoader.hh  BarcodeResolver.hh  DemultiplexingStats.hh  DemultiplexingStatsXml.hh  SampleSheetCsv.hh  TileBarcodeStats.hh
src/c++/include/flowcell/: BamLayout.hh  BarcodeMetadata.hh  BclBgzfLayout.hh  BclLayout.hh  BclLayoutAttributes.hh  FastqLayout.hh  Layout.hh  ReadMetadata.hh  SequencingAdapterListGrammar.hpp  SequencingAdapterMetadata.hh  TileMetadata.hh
src/c++/include/io/: BamLoader.hh  BclMapper.hh  BitsetLoader.hh  BitsetSaver.hh  BoostGzipDecompressor.hh  ClocsMapper.hh  FastaReader.hh  FastqLoader.hh  FastqReader.hh  FileBufCache.hh  FileBufWithReopen.hh  FileSinkWithMd5.hh  FiltersMapper.hh  Fragment.hh  FragmentIndex.hh  FragmentReader.hh  InflateGzipDecompressor.hh  LocsMapper.hh  MatchReader.hh  MatchWriter.hh  PtreeXml.hh
src/c++/include/oligo/: Kmer.hh  KmerGenerator.hpp  Mask.hh  Nucleotides.hh  Permutate.hh  Permutations.hh
src/c++/include/options/: AlignOptions.hh  BpbToWigOptions.hh  ExtractNeighborsOptions.hh  FindNeighborsOptions.hh  MergeReferencesOptions.hh  PrintContigsOptions.hh  ReorderReferenceOptions.hh  SortReferenceOptions.hh  UseBasesMaskGrammar.hh
src/c++/include/package/: InstallationPaths.hh
src/c++/include/reference/: Contig.hh  ContigLoader.hh  ContigsPrinter.hh  NeighborsFinder.hh  ReferenceKmer.hh  ReferenceMetadata.hh  ReferencePosition.hh  ReferenceSorter.hh  SortedReferenceMetadata.hh  SortedReferenceXml.hh
src/c++/include/reports/: AlignmentReportGenerator.hh
src/c++/include/rta/: BclBgzfTileReader.hh  BclMapper.hh  BclReader.hh  ConfigXml.hh  CycleBciMapper.hh  LaneBciMapper.hh  RunInfoXml.hh
src/c++/include/statistics/: MatchFinderStatsXml.hh  MatchFinderTileStats.hh
src/c++/include/workflow/: AlignWorkflow.hh  AlignWorkflowSerialization.hh  BpbToWigWorkflow.hh  ExtractNeighborsWorkflow.hh  MergeReferencesWorkflow.hh  ReorderReferenceWorkflow.hh
src/c++/include/xml/: XmlReader.hh  XmlWriter.hh
src/c++/lib/: CMakeLists.txt
src/c++/lib/alignment/: Alignment.cpp  BamTemplate.cpp  BandedSmithWaterman.cpp  CMakeLists.txt  Cigar.cpp  Cluster.cpp  ClusterSeedGenerator.cpp  FragmentBuilder.cpp  MatchDistribution.cpp  MatchFilter.cpp  MatchFinder.cpp  MatchSelector.cpp  MatchTally.cpp  Quality.cpp  Read.cpp  SeedGeneratorBase.cpp  SeedLoader.cpp  SeedMemoryManager.cpp  ShadowAligner.cpp  TemplateBuilder.cpp  TemplateLengthStatistics.cpp
src/c++/lib/bam/: Bam.cpp  BamIndexer.cpp  BamParser.cpp  CMakeLists.txt
src/c++/lib/basecalls/: CMakeLists.txt  ConfigXml.cpp
src/c++/lib/bgzf/: BgzfReader.cpp  CMakeLists.txt
src/c++/lib/casava/: CMakeLists.txt  CasavaIntegration.cpp
src/c++/lib/common/: CMakeLists.txt  Debug.cpp  Exceptions.cpp  FileSystem.cpp  MD5Sum.cpp  ParallelSort.cpp  Process.cpp  Program.cpp  SystemCompatibility.cpp  config.h.in  md5.cpp
src/c++/lib/demultiplexing/: BarcodeLoader.cpp  BarcodeResolver.cpp  CMakeLists.txt  DemultiplexingStatsXml.cpp  MiSeqDualBarcodeSampleSheetCsvGrammar.hpp  MiSeqNonMultiplexedSampleSheetCsvGrammar.hpp  MiSeqSampleSheetCsvGrammar.hpp  MiSeqSingleBarcodeSampleSheetCsvGrammar.hpp  SampleSheetConstraints.hh  SampleSheetCsv.cpp  SampleSheetCsvGrammar.hpp  StandardSampleSheetCsvGrammar.hpp
src/c++/lib/flowcell/: BamLayout.cpp  BarcodeMetadata.cpp  BclBgzfLayout.cpp  BclLayout.cpp  Layout.cpp  (+5 more)
src/c++/libexec/: CMakeLists.txt  bpbToWig.cpp  extractNeighbors.cpp  findNeighbors.cpp  mergeReferences.cpp  printContigs.cpp  sortReference.cpp
src/c++/unittest/: CMakeLists.txt  RegistryName.cpp  RegistryName.hh  check-source.sh  cppunitTest.cpp
src/cmake/: boost.cmake  cppunit.cmake  cxxConfigure.cmake  cxxExecutable.cmake  cxxLibrary.cmake  globals.cmake  isaac_redist_macros.cmake  macros.cmake  merge.xslt.cmake
src/cmake/bootstrap/: common.sh  installBoost.sh  installCmake.sh
src/cmake/modules/: FindMarkdown.cmake  UseMarkdown.cmake
src/cmake/postInstall/: CMakeLists.txt
src/cmake/preInstall/: CMakeLists.txt
src/css/: CMakeLists.txt  Report.css.xml
src/data/: CMakeLists.txt
src/make/: CMakeLists.txt
src/make/common/: Config.mk  Debug.mk  Log.mk  Sentinel.mk
src/make/reference/: Config.mk  PackReference.mk  SortReference.mk  UnpackReference.mk
src/markdown/: CMakeLists.txt  manual.md
src/xsl/: CMakeLists.txt
src/xsl/alignment/: FlowcellSummaryPage.xsl  GenerateReport.xsl  LaneSummary.xsl  NameUtils.xsl  PairStatsTable.xsl  PathUtils.xsl  TileMismatchPages.xsl
src/xsl/casava/: BuildStatsToDupCountSummaryTxt.xsl  MatchSelectorStatsToReadsIdx.xsl
src/xsl/common/: Utils.xsl
src/xsl/reference/: GetFormatVersion.xsl  GetSupportedSeedLengths.xsl
(+185 files in other folders)
